maboobecker@yahoo.com/src/objects/Fulfillment__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Explorer__r.MailingStreet &amp; BR() &amp;
Explorer__r.MailingCity &amp; &quot;,&quot; &amp; Explorer__r.MailingState &amp; BR() &amp;
Explorer__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdventurePackageId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>AdventurePackageId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Adventure_Package_Cost__c</fullName>
        <label>Adventure Package Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adventure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adventure</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <formula>Adventure_Package_Cost__c * 0.4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dietary_Restrictions__c</fullName>
        <label>Dietary Restrictions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
                <value>
                    <fullName>Vegan</fullName>
                </value>
                <value>
                    <fullName>Kosher</fullName>
                </value>
                <value>
                    <fullName>Diabetic</fullName>
                </value>
                <value>
                    <fullName>Gluten Free</fullName>
                </value>
                <value>
                    <fullName>No Peanuts</fullName>
                </value>
                <value>
                    <fullName>No Shellfish</fullName>
                </value>
                <value>
                    <fullName>Allergy (specify in special needs)</fullName>
                </value>
                <value>
                    <fullName>Pescatarian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Explorer__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedition_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expedition Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Fulfillments (Expedition Leader)</relationshipLabel>
        <relationshipName>Fulfillments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Explorer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Explorer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <formula>Explorer__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Marketer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Marketer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>Explorer__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_form_of_Contact__c</fullName>
        <label>Preferred form of Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mobile Call</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_Date__c</fullName>
        <label>Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_Needs__c</fullName>
        <label>Special Needs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Paid Deposit</fullName>
                </value>
                <value>
                    <fullName>Paid in Full</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted Waiver</label>
        <type>Checkbox</type>
    </fields>
    <label>Fulfillment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fulfillment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fulfillments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>